Fixes #1629 ClayCSS Atlas Accordion collapse icon should be 12px
Fixes #1629 ClayCSS Sheet added option to configure `$sheet-subtitle-collapse-icon-font-size`

Fixes #1629 ClayCSS Atlas Sheet `$sheet-subtitle-collapse-icon-font-size` should be 12px

--- a/packages/clay-css/src/scss/atlas/variables/_sheets.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_sheets.scss
@@ -28,6 +28,10 @@ $sheet-subtitle-font-size: 0.875rem !default; // 14px
 $sheet-subtitle-padding-y: 0.5rem !default; // 8px
 $sheet-subtitle-margin-bottom-mobile: 1rem !default; // 16px
 
+// Sheet Subtitle as Panel Header
+
+$sheet-subtitle-collapse-icon-font-size: 0.75rem !default;
+
 // Sheet Tertiary Title
 
 $sheet-tertiary-title-margin-bottom-mobile: 0.5rem !default; // 8px
